--- a/TODO.txt
+++ b/TODO.txt
@@ -3,15 +3,35 @@ TODO :
 Back :
 V Création du projet sur git
 V Création d'un projet Phalcon REST basique
-- Création des modèles liés à ma base de données
+V Création des modèles liés à ma base de données
     V User
-    * Game
-    * Schedule
-    * Roles
-    * UserGame
-    * UserRoles
+    V Game
+    V UserGame
+    V Slot
+    V UserSlot
+    V Roles
+    V UserRoles
 V Récupération des données basique (liste des utilisateurs)
-- Récupération des données avancée (liste des parties jouées avec les utilisateurs ayant joués)
+V Récupération des données avancée (liste des parties jouées avec les utilisateurs ayant joués)
+- Données user standard :
+    {
+        username: 'Guillaume',
+        gravatar: 'http://lolol/guillaume'
+        enabled: 1,
+        roles: ['USER', 'ADMIN'],
+        games: {
+            played: 123,
+            won: 100,
+            lost: 23,
+            total: 534,
+            playedThisMonth: 12,
+            wonThisMonth: 7,
+            lostThisMonth: 5,
+            totalThisMonth: 534
+        }
+    }
+- Définition de toutes les routes
+    *
 - Définition des algorithmes de calculs (score, ratio)
 - Récupération des données pour les graphes
 - Insertion des données
@@ -19,11 +39,12 @@ V Récupération des données basique (liste des utilisateurs)
 - Suppression des données
 
 Front :
-- Création du projet git
-- Création d'un projet React Flux basique (avec toutes les librairies qui vont bien : bootstrap, etc.)
-- Mise en place de l'accès à l'API REST
-- Affichage des données basique
-- Affichage des données avancées
+V Création du projet git
+V Création d'un projet React Flux basique (avec toutes les librairies qui vont bien : bootstrap, etc.)
+V Mise en place de l'accès à l'API REST
+V Affichage des données basique
+- Définition de toutes les vues
+    *
 - Affichage de graphe
 - Création de l'IHM global
 - Création des formulaires
@@ -32,8 +53,8 @@ Front :
     * Suppression
 
 
+Autre :
+- Système de commentaires
+- Mode 1vs1
 
-http://cujojs.com/
 https://www.digitalocean.com/community/tutorials
-https://github.com/myagoo/fluxbone
-reflux
